--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,7 @@ edition = "2024"
 
 [dependencies]
 rand = "0.9.1"
+serde = { version = "1.0", features = ["derive"] }
+actix-web = "4.0"
+actix-rt = "2.0"  # Runtime for async main
+serde = { version = "1.0", features = ["derive"] }
