--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ rand = "0.9.1"
 actix-web = "4.0"
 actix-rt = "2.0"  # Runtime for async main
 serde = { version = "1.0", features = ["derive"] }
+solana-program = "2.2.1"
+borsh = "1.5.7"
+ink_primitives = "5.1.1"
+ink_storage = "5.1.1"
+ink_env = "5.1.1"
