--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ ehthumbs.db
 Desktop.ini
 
 # Node.js specific
+node_modules
 node_modules/
 npm-debug.log*
 yarn-debug.log*
@@ -66,3 +67,10 @@ out/
 dist/
 build/
 .cache/
+
+# Deno specific
+deno.lock
+.deno_dir/
+
+!Cargo.lock
+!package-lock.json
